@@ -52,10 +52,11 @@ class RendererBase:
     def __init__(self):
         self._texmanager = None
 
-    def open_group(self, s):
+    def open_group(self, s, gid=None):
         """
-        Open a grouping element with label *s*. Is only currently used by
-        :mod:`~matplotlib.backends.backend_svg`
+        Open a grouping element with label *s*. If *gid* is given, use
+        *gid* as the id of the group. Is only currently used by
+        :mod:`~matplotlib.backends.backend_svg`.
         """
         pass
 
