@@ -1,3 +1,6 @@
+2008-12-17 Add group id support in artist. Two examples which
+           demostrate svg filter are added. -JJL
+
 2008-12-16 Another attempt to fix dpi-dependent behavior of Legend. -JJL
 
 2008-12-16 Fixed dpi-dependent behavior of Legend and fancybox in Text.
